aligns a lot, breaks messages correctly lots of stuff

--- a/tgui/packages/tgui/styles/main.scss
+++ b/tgui/packages/tgui/styles/main.scss
@@ -45,6 +45,7 @@
 @include meta.load-css('./interfaces/CyborgModuleRewriter.scss');
 @include meta.load-css('./interfaces/GasCanister.scss');
 @include meta.load-css('./interfaces/PortableAtmos.scss');
+@include meta.load-css('./interfaces/TeleSci.scss');
 
 // Layouts
 @include meta.load-css('./layouts/Layout.scss');
